--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,40 +1,110 @@
+:root {
+    --color-morado: #3d19b7;
+    --color-blanco: #dfe2e9;
+}
+
 .container {
     width: 1180px;
     margin: 0 auto;
 }
 
-header {
+.background {
+    background-image: url(/img/FondoPlaya.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 10%;
+    width: 100%;
+    height: 100vh;
+    z-index: -10;
+    position: absolute;
+    inset: 0;
+}
+
+/* Header */
+
+.presentacion {
+    height: 100vh;
+}
+
+.presentacion header {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-header figure {
-    width: 200px;
+.presentacion header figure {
+    width: 250px;
 }
 
-header nav ul {
+.presentacion header nav ul {
     display: flex;
     gap: 1rem;
 }
 
-header nav ul li {
-    width: 195px;
+.presentacion header nav ul li {
+    width: 190px;
     height: 55px;
 }
 
-header nav ul li a {
+.presentacion header nav ul li a {
     height: 100%;
     background: #3D19B7;
     color: #dfe2e9;
     border-radius: 4rem;
-    font-size: 22px;
+    font-size: 1.2rem;
     display: grid;
     place-items: center;
     align-items: center;
     transition: .3s;
 }
 
-header nav ul li a:hover {
+.presentacion header nav ul li a:hover {
     box-shadow: 0 0 16px #3D19B7;
+}
+
+.presentacion header nav ul li a:active {
+    scale: 1.05;
+}
+
+/* Section */
+
+section {
+    height: 100vh;
+}
+
+/* Section -> Porque Río de Janeiro */
+
+#porQue {
+    background: var(--color-morado);
+    color: var(--color-blanco);
+}
+
+#porQue .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 100vh;
+}
+
+#porQue .container .txt {
+    width: 600px;
+    padding: 2rem;
+    display: grid;
+    gap: 0.8125rem;
+
+    & h2 {
+        font-size: 1.8125rem;
+    }
+
+    & p {
+        font-size: 1.1875rem;
+    }
+}
+
+#porQue .container .img {
+    width: 500px;
+}
+
+#porQue .container .img img {
+    border-radius: .5rem;
 }
