--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,13 +1,3 @@
-:root {
-    --color-morado: #3d19b7;
-    --color-blanco: #dfe2e9;
-}
-
-.container {
-    width: 1180px;
-    margin: 0 auto;
-}
-
 .background {
     background-image: url(/img/FondoPlaya.png);
     background-repeat: no-repeat;
@@ -33,7 +23,7 @@
 }
 
 .presentacion header figure {
-    width: 250px;
+    width: 150px;
 }
 
 .presentacion header nav ul {
@@ -42,12 +32,13 @@
 }
 
 .presentacion header nav ul li {
-    width: 190px;
-    height: 55px;
+    width: 175px;
+    height: 45px;
 }
 
 .presentacion header nav ul li a {
     height: 100%;
+    width: 100%;
     background: #3D19B7;
     color: #dfe2e9;
     border-radius: 4rem;
@@ -107,46 +98,4 @@ section {
 
 #porQue .container .img img {
     border-radius: .5rem;
-}
-
-/* Footer */
-
-footer {
-    background: var(--color-morado);
-    color: var(--color-blanco);
-    padding: 1rem 0;
-}
-
-footer .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-footer .container .redesSociales h3 {
-    text-align: center;
-}
-
-footer .container figure img {
-    width: 150px;
-}
-
-footer .container .redesSociales h3 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-}
-
-footer .container .redesSociales figure {
-    display: flex;
-    gap: 3rem;
-}
-
-footer .container .redesSociales figure img {
-    width: 60px;
-    height: auto;
-}
-
-footer .copyright {
-    display: block;
-    text-align: center;
 }
