--- a/styles/index.css
+++ b/styles/index.css
@@ -65,7 +65,7 @@
   bottom: 30%;
 }
 
-.presentacion .container-extenso .txt span{
+.presentacion .container-extenso .txt span {
   font-family: var(--font-titulo);
   color: var(--color-blanco);
   font-size: 2.8rem;
@@ -84,7 +84,7 @@
 /* Section */
 
 section {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 /* Section -> Porque Río de Janeiro */
@@ -108,6 +108,10 @@ section {
   gap: 0.8125rem;
 }
 
+#porQue .container .txt :where(h2, p) {
+  color: var(--color-blanco);
+}
+
 #porQue .container .txt h2 {
   font-size: 1.8125rem;
 }
@@ -121,6 +125,31 @@ section {
 }
 
 #porQue .container .img img {
+  border-radius: .5rem;
+}
+
+/* Section -> Galeria */
+
+#galeria h2 {
+  text-align: center;
+  font-size: 1.8125rem;
+  margin-top: 1rem;
+}
+
+#galeria .filas {
+  height: 450px;
+  display: flex;
+  gap: 1rem;
+  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  margin: 1rem 0;
+}
+
+#galeria .filas img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: .5rem;
 }
 
@@ -140,6 +169,7 @@ footer .container {
 
 footer .container .redesSociales h3 {
   text-align: center;
+  color: var(--color-blanco);
 }
 
 footer .container figure img {
@@ -164,4 +194,5 @@ footer .container .redesSociales figure img {
 footer .copyright {
   display: block;
   text-align: center;
+  color: var(--color-blanco);
 }
