--- a/styles/atracciones.css
+++ b/styles/atracciones.css
@@ -1,3 +1,7 @@
+body {
+    background: linear-gradient(to bottom, #fceabb, #f8b500);
+}
+
 /* Header */
 header {
     display: flex;
@@ -40,8 +44,50 @@ header nav ul li a:active {
     scale: 1.05;
 }
 
+/* section */
+.container-corto section {
+    display: flex;
+    gap: 1rem;
+    margin: 2.5rem 0;
+    height: 100vh;
+}
+
+.container-corto section :is(.txt, figure) {
+    width: 50%;
+}
+
+.container-corto section .txt h2 {
+    font-size: 2.25rem;
+}
+
+.container-corto section .txt p {
+    font-size: 1.5rem;
+}
+
+.container-corto section:nth-child(even) {
+    flex-direction: row-reverse;
+}
+
+.container-corto section figure {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-corto section figure img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1rem;
+    transition: .3s;
+}
+
+.container-corto section figure img:hover {
+    scale: 1.02;
+}
 
 /* Footer */
+
 footer {
     background: var(--color-morado);
     color: var(--color-blanco);
