--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -1,3 +1,9 @@
+body {
+    background-image: url("../img/image/mirante-dona-marta.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 /* Header */
 
 header {
@@ -51,11 +57,15 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2rem;
+    margin: 2rem;
+    gap: 1rem;
 }
 
 main :is(.txt, .container-form) {
     width: 50%;
+    background-color: #dfe2e9d9;
+    padding: 1rem;
+    border-radius: .5rem;
 }
 
 /* Texto de contacto */
