--- a/styles/atracciones.css
+++ b/styles/atracciones.css
@@ -3,6 +3,7 @@ body {
 }
 
 /* Header */
+
 header {
     display: flex;
     justify-content: space-between;
@@ -13,112 +14,90 @@ header figure {
     width: 150px;
 }
 
-header nav ul {
+header .desktop-menu ul {
     display: flex;
     gap: 1rem;
 }
 
-header nav ul li {
+header .desktop-menu ul li {
     width: 175px;
     height: 45px;
 }
 
-header nav ul li a {
+header .desktop-menu ul li a {
     height: 100%;
     width: 100%;
     background: var(--color-morado);
     color: var(--color-blanco);
     border-radius: 4rem;
     font-size: 1.2rem;
-    display: grid;
-    place-items: center;
+    display: flex;
+    justify-content: center;
     align-items: center;
     transition: .3s;
 }
 
-header nav ul li a:hover {
+header .desktop-menu ul li a:hover {
     box-shadow: 0 0 16px var(--color-morado);
 }
 
-header nav ul li a:active {
+header .desktop-menu ul li a:active {
     scale: 1.05;
 }
 
 /* Header responsive */
 
-.check {
+#checkbox {
     display: none;
 }
 
-.hamburger-button {
-    display: none;
+.toggle {
     position: relative;
-    width: 70px;
-    height: 50px;
-    margin: 0 1rem;
+    width: 55px;
+    height: 64px;
     cursor: pointer;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    transition-duration: .3s;
+    margin: 0 1rem;
     z-index: 9999;
 }
 
-.hamburger-button div {
-    width: 70px;
-    height: 10px;
+.bars {
+    width: 100%;
+    height: 8px;
     background-color: var(--color-negro);
-    border-radius: 3px;
-    position: absolute;
-    transition: 0.4s;
+    border-radius: 5px;
+    transition-duration: .3s;
 }
 
-.line1 {
-    top: 0;
+#checkbox:checked + .toggle #bar2 {
+    opacity: 0;
+    transform: translateX(-20px);
+    transition-duration: .3s;
 }
 
-.line2 {
-    top: calc(40%);
+#checkbox:checked + .toggle #bar1 {
+    transform: translateY(18px) rotate(45deg);
+    transition-duration: .3s;
+    transform-origin: center;
 }
 
-.line3 {
-    top: calc(80%);
-}
-
-.hamburger-button:hover div {
-    width: 54.2857143%;
-}
-
-.hamburger-button:hover .line1 {
-    transform: translate(31.5px, 12px) rotate(35deg);
-    border-radius: 7px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.hamburger-button:hover .line3 {
-    transform: translate(31.5px, -12px) rotate(-35deg);
-    border-radius: 7px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.check:checked~.hamburger-button:hover .line1 {
-    transform: translate(0, 12px) rotate(-35deg);
-    border-radius: 7px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-
-.check:checked~.hamburger-button:hover .line3 {
-    transform: translate(0, -12px) rotate(35deg);
-    border-radius: 7px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-
-.check:checked~.hamburger-button:hover .line2 {
-    margin-left: 32px;
+#checkbox:checked + .toggle #bar3 {
+    transform: translateY(-18px) rotate(-45deg);
+    transition-duration: .3s;
+    transform-origin: center;
 }
 
 @media (max-width: 1024px) {
-    .hamburger-button, .mobile-menu {
+    .toggle {
+        display: flex;
+    }
+    
+    .mobile-menu {
         display: block;
     }
 }
@@ -126,11 +105,55 @@ header nav ul li a:active {
 /* Menú */
 
 .mobile-menu {
-    display: none;
+    width: 50%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background: var(--color-verde);
+    transform: translateX(100%);
+    transition: transform 0.4s ease-in-out;
+    z-index: 999;
+    display: block; /* Asegurar que el menú siempre esté presente en el DOM */
 }
 
-.check:checked ~ .mobile-menu {
-    display: block;
+.mobile-menu ul {
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    position: absolute;
+    inset: 0;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.mobile-menu ul li {
+    background: var(--color-blanco);
+    width: 100%;
+    height: 40px;
+    opacity: 0;
+    transform: translateX(50px);
+    transition: all 0.3s ease-in-out;
+    transition-delay: calc(0.1s * var(--i));
+}
+
+.mobile-menu ul li a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-negro);
+}
+
+#checkbox:checked~.mobile-menu {
+    transform: translateX(0);
+    /* Menú visible */
+}
+
+#checkbox:checked~.mobile-menu ul li {
+    opacity: 1;
+    transform: translateX(0);
 }
 
 /* section */
@@ -246,7 +269,7 @@ footer .copyright {
 
 /* Tablets y notebooks pequeños */
 @media (max-width: 1024px) {
-    .container-extenso header nav {
+    .container-extenso header .desktop-menu {
         display: none;
     }
 }
