--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -58,7 +58,7 @@ header .desktop-menu ul li a:active {
     width: 55px;
     height: 64px;
     cursor: pointer;
-    display: none; /* Solo una declaración de display */
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
