Ajustar estilos del menú y figura del encabezado para mejorar la presentación en dispositivos móviles. Corregir la sintaxis de los selectores en el menú de hamburguesa.

--- a/styles/atracciones.css
+++ b/styles/atracciones.css
@@ -244,6 +244,10 @@ footer .copyright {
 
 /* Celulares */
 @media (max-width: 480px) {
+    header figure {
+        width: 100px;
+    }
+    
     .container-corto section :is(.txt, figure) {
         width: 100%;
     }
