Actualizar estilos del encabezado en dispositivos móviles para mejorar la presentación.

--- a/styles/index.css
+++ b/styles/index.css
@@ -328,7 +328,7 @@ footer .copyright {
 
 /* Celulares */
 @media (max-width: 480px) {
-  header figure {
+  .presentacion header figure {
     width: 100px;
   }
 
