--- a/styles/atracciones.css
+++ b/styles/atracciones.css
@@ -236,6 +236,14 @@ footer .container .redesSociales figure img {
     height: auto;
 }
 
+footer .container .info-alumno ul {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    font-family: var(--font-parrafos);
+    margin: .5rem 0;
+}
+
 footer .copyright {
     display: block;
     text-align: center;
