--- a/styles/donde_comer.css
+++ b/styles/donde_comer.css
@@ -1,3 +1,8 @@
+body {
+    background: linear-gradient(to bottom, #e0f2f1, #80cbc4);
+
+}
+
 /* Header */
 
 header {
@@ -149,6 +154,60 @@ header .desktop-menu ul li a:active {
 #checkbox:checked~.mobile-menu ul li {
     opacity: 1;
     transform: translateX(0);
+}
+
+/* articulos */
+
+.container-corto section article {
+    display: flex;
+    gap: 1rem;
+    margin: 2.5rem;
+    min-height: 100vh;
+}
+
+.container-corto section article:nth-child(even) {
+    flex-direction: row-reverse;
+}
+
+.container-corto section :is(h1, p) {
+    text-align: center;
+}
+
+.container-corto section h1 {
+    font-size: 42px;
+    margin-top: .8rem;
+}
+
+.container-corto section p {
+    font-size: 1.5rem;
+}
+
+.container-corto section article :is(.txt, figure) {
+    width: 50%;
+}
+
+.container-corto section article .txt h2 {
+    font-size: 2.25rem;
+}
+
+.container-corto section article .txt p {
+    font-size: 1.5rem;
+}
+
+.container-corto section article figure {
+    overflow: hidden;
+    border-radius: 1rem;
+}
+
+.container-corto section article figure img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: .3s;
+}
+
+.container-corto section article figure img:hover {
+    transform: scale(1.05);
 }
 
 /* Footer */
