--- a/styles/donde_comer.css
+++ b/styles/donde_comer.css
@@ -180,6 +180,7 @@ header .desktop-menu ul li a:active {
 
 .container-corto section p {
     font-size: 1.5rem;
+    margin: 0 1rem;
 }
 
 .container-corto section article :is(.txt, figure) {
@@ -275,6 +276,18 @@ footer .copyright {
     .container-corto :is(section, section:nth-child(even)) {
         flex-direction: column-reverse;
         height: auto;
+    }
+
+    .container-corto section article :is(.txt, figure) {
+        width: 100%;
+    }
+
+    .container-corto section article .txt h2 {
+        text-align: center;
+    }
+
+    .container-corto :is(section, section:nth-child(even)) article {
+        flex-direction: column;
     }
 
     footer .container .redesSociales figure {
